# thatch

./: ANDROID_BUILD.md  CLAUDE.md  Cargo.toml  PROGRESS.md  build_android.bat  build_android.sh  build_android_aab.bat  build_android_aab.sh  clean_android.bat  fix_apk.bat  install_apk.bat  setup_android_dev.bat
.claude/: settings.local.json
src/: bevy_systems.rs  lib.rs  main.rs  scenes.rs
src/game/: actions.rs  autoexplore.rs  entities.rs  mod.rs  state.rs  world.rs
src/generation/: dungeon.rs  encounters.rs  items.rs  mod.rs
src/input/: commands.rs  mod.rs
src/lldm/: mcp.rs  mod.rs  traits.rs
src/rendering/: display.rs  mod.rs  ui.rs
src/utils/: math.rs  mod.rs  pathfinding.rs
tests/: integration_startup.rs  stair_navigation_tests.rs  test_performance.rs  test_terminal_rendering.rs
