[package]
name = "thatch"
version = "0.1.0"
edition = "2021"
authors = ["Thatch Team"]
description = "A deep, complex roguelike with LLM-driven dungeon mastering"
license = "MIT"

[dependencies]
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.28"
noise = "0.9"
pathfinding = "4.0"

# MCP and networking
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"

# Development and debugging tools
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.0"

# Feature flags for different build modes
[features]
default = []
dev-tools = ["tracing", "tracing-subscriber"]
ai-player = []
mcp-server = ["jsonrpc-core", "jsonrpc-http-server", "jsonrpc-derive"]

# Development profile with debugging info
[profile.dev]
debug = true
opt-level = 0

# Release profile optimized for performance
[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

# Profile for development with some optimizations
[profile.dev-optimized]
inherits = "dev"
opt-level = 2

[[bench]]
name = "benchmarks"
harness = false
