[package]
name = "thatch"
version = "0.1.0"
edition = "2021"
authors = ["Thatch Team"]
description = "A deep, complex roguelike with LLM-driven dungeon mastering"
license = "MIT"

[dependencies]
macroquad = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
noise = "0.9"
pathfinding = "4.0"

# MCP and networking
jsonrpc-core = { version = "18.0", optional = true }
jsonrpc-http-server = { version = "18.0", optional = true }
jsonrpc-derive = { version = "18.0", optional = true }

# Development and debugging tools
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.0"

# Feature flags for different build modes
[features]
default = []
dev-tools = ["tracing", "tracing-subscriber"]
ai-player = []
mcp-server = ["jsonrpc-core", "jsonrpc-http-server", "jsonrpc-derive"]

# Development profile with debugging info
[profile.dev]
debug = true
opt-level = 0

# Release profile optimized for performance
[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

# Profile for development with some optimizations
[profile.dev-optimized]
inherits = "dev"
opt-level = 2

# Android configuration
[package.metadata.android]
assets = "assets/"
icon = "@mipmap/ic_launcher"
build_targets = [
    "armv7-linux-androideabi", 
    "aarch64-linux-android", 
    "i686-linux-android", 
    "x86_64-linux-android"
]
version_code = 1
version_name = "0.1.0"

[package.metadata.android.activity_attributes]
"android:exported" = "true"
"android:screenOrientation" = "userLandscape"

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

# Benchmarks will be added later
# [[bench]]
# name = "benchmarks"
# harness = false
